--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-contrib-less": "~0.8.2",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-stencil": "~1.0.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
