--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "grunt": "~0.4.1",
     "grunt-contrib-less": "~0.8.2",
     "grunt-contrib-jshint": "~0.7.2",
-    "grunt-stencil": "~1.0.0",
+    "grunt-stencil": "colinbate/grunt-stencil",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-rsync": "~0.2.1",
+    "grunt-contrib-connect": "~0.5.0"
   }
 }
